--- a/static/GeneralStyles.css
+++ b/static/GeneralStyles.css
@@ -12,6 +12,23 @@
  vertical-align: middle;
 }
 
+#MessageBox{
+    transform: translate(50%, 50%);
+    height: 400px;
+    width: 400px;
+    border: 2px solid;
+    overflow: auto;
+}
+
+#InputBox{
+    transform: translate(50%, 50%);
+    width: 400px;
+    margin-top: 8%;
+    position: relative;
+    border: 4px solid;
+    overflow: auto;
+}
+
 button{
     cursor:pointer;
 }
