--- a/static/GeneralStyles.css
+++ b/static/GeneralStyles.css
@@ -7,6 +7,14 @@
     top: 0px;
 }
 
+#OtherPlayersText{
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    color: black;
+    text-align: center;
+}
+
 #LevelButtons{
  text-align: center;
  vertical-align: middle;
