--- a/static/GeneralStyles.css
+++ b/static/GeneralStyles.css
@@ -28,7 +28,7 @@
 }
 
 #MessageBox{
-    transform: translate(800px, 0%);
+    transform: translate(400px, 0%);
     height: 400px;
     width: 400px;
     border: 2px solid;
@@ -38,16 +38,30 @@
 
 
 #InputBox{
-    transform: translate(800px, 0%);
+    transform: translate(400px, -400%);
     width: 400px;
-    margin-top: 8%;
     position: relative;
     border: 4px solid;
     overflow: auto;
 }
 
+#MessageButton{
+    transform: translate(400px, -460%); 
+    margin-top: 5%;
+  
+}
+
 button{
     cursor:pointer;
+}
+
+#ReadyButton{
+    position: fixed;
+    top: 70%;
+    left: 50%;
+    text-align: center;    
+    border-radius: 20px;
+    background-color: antiquewhite;
 }
 
 #SearchBar{
